@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.GregorianCalendar;
 import java.util.LinkedHashMap;
@@ -507,10 +506,7 @@ public final class DirectoryBrowserSupport implements HttpResponse {
 
     private static String createBackRef(int times) {
         if (times == 0)    return "./";
-        StringBuilder buf = new StringBuilder(3 * times);
-        for (int i = 0; i < times; i++)
-            buf.append("../");
-        return buf.toString();
+        return "../".repeat(times);
     }
 
     private static void zip(StaplerResponse rsp, VirtualFile root, VirtualFile dir, String glob) throws IOException, InterruptedException {
@@ -764,7 +760,7 @@ public final class DirectoryBrowserSupport implements HttpResponse {
                 for (VirtualFile f : files) {
                     Path p = new Path(Util.rawEncode(f.getName()), f.getName(), f.isDirectory(), f.length(), f.canRead(), f.lastModified());
                     if (!f.isDirectory()) {
-                        r.add(Collections.singletonList(p));
+                        r.add(List.of(p));
                     } else {
                         // find all empty intermediate directory
                         List<Path> l = new ArrayList<>();
